--- a/CodeFiles/batch_A/day7/template.css
+++ b/CodeFiles/batch_A/day7/template.css
@@ -1,54 +1,350 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* border: 2px solid red; */
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+#logo,
+#search {
+  /* border: 2px solid blue; */
+  /* width: 150px; */
+  padding: 10px 20px;
+  gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#logo img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+#logo span {
+  display: block;
+}
 
-header{
-    display: flex;
-    justify-content: space-between;
-    background-color: rgba(128, 128, 128, 0.727);
-}
-#logo, #search{
-    /* border: 2px solid blue; */
-    /* width: 150px; */
-    padding: 10px 20px;
-    gap: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-#logo img{
-    width: 50px;
-    height: 50px;
+#search {
+  img {
+    width: 30px;
     border-radius: 50%;
-}
-#logo span{
-    display: block;
+  }
 }
 
-#search{
-    img{
-        width: 30px;
-        border-radius: 50%;
-    }
+nav ul {
+  /* border: 1px solid black; */
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  /* border: 1px solid black; */
+  gap: 20px;
 }
 
-nav ul{
-    list-style: none;
-    display: flex;
-    justify-content: center;
+nav > ul > li {
+  /* border: 1px solid blue; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 70px;
+  /* border: 1px solid black; */
+}
+nav {
+  display: flex;
+
+  /* border: 1px solid blue; */
+}
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+#blog {
+  background-color: orange;
+  height: 30px;
+  border-radius: 10px;
+  padding: 20px;
+  color: white;
+  text-transform: capitalize;
+}
+.corousal {
+  background-image: url("./images/animatedCity.gif");
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 100% 100%;
+}
+
+.corousal > div {
+  width: 60%;
+  color: white;
+  text-align: center;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.corousal h3 {
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.corousal button {
+  width: 150px;
+  text-transform: uppercase;
+  padding: 16px;
+  border-radius: 10px;
+  background-color: rgb(255, 123, 0);
+  color: white;
+  border: none;
+}
+nav > ul > li > a {
+  /* border: 1px solid black; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+}
+
+nav > ul > li a:hover {
+  /* background-image: url(./images/animatedCity.gif); */
+  background-color: orange;
+  color: white;
+}
+
+.services {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  min-height: 300px;
+}
+
+.services button {
+  width: 150px;
+  padding: 13px;
+  background-color: rgb(33, 145, 195);
+  position: relative;
+  bottom: 24px;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+}
+.services img {
+  width: 80px;
+  border-radius: 50%;
+}
+.services #articles {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+.services #articles article {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 200px;
+}
+
+.services #articles article span {
+  color: rgb(4, 105, 153);
+  font-weight: 600;
+}
+
+.portfolio {
+  background-color: rgb(46, 62, 78);
+  color: white;
+  /* height: 80vh; */
+}
+
+.portfolio .container {
+  width: 80%;
+  margin: auto;
+  padding-top: 50px;
+}
+
+.portfolio-heading {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.portfolio-heading h3 {
+  color: orange;
+  font-size: 25px;
+}
+
+.portfolio-heading button {
+  background-color: rgb(32, 144, 196);
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+}
+
+.portfolio .portfolios {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.portfolio .portfolios article img {
+  width: 100%;
+}
+
+.portfolios article h4 {
+  color: orange;
+}
+.portfolios article * {
+  margin-bottom: 15px;
+}
+
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 30px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.testimonials h2 {
+  color: rgb(4, 109, 157);
+  font-weight: 900;
+}
+
+.testimonials p {
+  font-weight: 700;
+  font-size: 20px;
+  width: 80%;
+}
+.testimonials img {
+  width: 100px;
+  border-radius: 50%;
+}
+
+.testimonials h4 {
+  color: orange;
+  margin-bottom: 30px;
+}
+
+.testimonials .images {
+  display: flex;
+  gap: 20px;
+}
+
+.testimonials .images div {
+  border-bottom: 10px solid gray;
+  padding-bottom: 30px;
+}
+
+.testimonials .images div:hover {
+  border-bottom: 10px solid orange;
+}
+
+footer {
+  background-color: rgb(46, 62, 78);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 40px;
+  color: white;
+  padding: 20px;
+}
+
+footer h4{
+  color: orange;
+}
+footer img {
+  width: 50px;
+}
+
+footer a {
+  color: rgb(29, 145, 185);
+}
+footer > div {
+  /* border: 2px solid white; */
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  /* height: 300px; */
+}
+
+footer form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+footer form input{
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
+footer form label {
+  color: rgb(29, 145, 185);
+}
+
+footer form input[type="submit"] {
+  background-color: rgb(29, 145, 185);
+  width: 100px;
+  align-self: flex-end;
+}
+
+
+footer .img{
+  background-color: white;
+  width: 60px;
+  height: 60px;
+}
+
+footer .projects > div, footer .contacts > div{
+  display: flex;
+  gap: 20px;
+}
+
+
+/* for tablet screens */
+@media (max-width:1024px){
+  header{
+    flex-direction: column;
     align-items: center;
-    /* border: 1px solid black; */
-    gap: 20px;
+  }
 }
-nav{
-    display: flex;
 
-    /* border: 1px solid blue; */
-}
-nav a{
-    text-decoration: none;
-    color: black;
+/* for mobile screens */
+@media (max-width:600px){
+  .services{
+    min-height: 60vh;
+  }
+
+  header ul{
+    gap: 5px;
+  }
+
+  .services #articles{
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .services article{
+    min-width: 80%;
+  }
 }
