--- a/CodeFiles/batch_A/react days/e-commerce-app/src/components/product-list/ProductList.css
+++ b/CodeFiles/batch_A/react days/e-commerce-app/src/components/product-list/ProductList.css
@@ -1,5 +1,11 @@
 #prodList{
-    background-color: wheat;
+    padding: 10px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+
+#PrdListCompo{
+    background-color: wheat;
 }
