--- a/CodeFiles/batch_A/react days/e-commerce-app/src/components/product/Product.css
+++ b/CodeFiles/batch_A/react days/e-commerce-app/src/components/product/Product.css
@@ -1,12 +1,22 @@
 #product{
     border: 1px solid gray;
-    padding: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: center; */
+    height: 400px;
+    overflow: hidden;
 }
 
 
 #product img{
-    width: 100px;
+    height: 100px;
+}
+
+#mainDetail{
+    /* border: 1px solid red; */
+    border-bottom: 1px dashed black;
+    min-height: 250px;
+    text-align: center;
+    background-image: linear-gradient(to right, skyblue, pink);
 }
